sql/sql_table.cc
@@ -11666,8 +11666,10 @@ static int online_alter_read_from_binlog(THD *thd, rpl_group_info *rgi,
   {
     const auto *descr_event= rgi->rli->relay_log.description_event_for_exec;
     auto *ev= Log_event::read_log_event(log_file, descr_event, false);
-    if (!ev)
+    error= log_file->error;
+    if (unlikely(!ev))
       break;
+    DBUG_ASSERT(!error);
 
     ev->thd= thd;
     error= ev->apply_event(rgi);
